# ragamuffin

./: .gitignore  Cargo.toml  Cross.toml  DESIGN.md  README.md  build.rs
.github/workflows/: release.yaml
changelog/: 2026-06-20-mvp-summary.md  2026-06-20T000000-task0-project-foundation.md  2026-06-20T000000-task4-rag-orchestration.md  2026-06-20T120000-task1-embedder-trait-and-fake-embedder.md  2026-06-20T140000-task2-store-add-persist-load.md  2026-06-20T160000-task5-cli-surface.md  2026-06-20T180000-task6-fastembed-real-embedder.md  2026-06-20T200000-task7-mcp-server.md  2026-06-21-directory-ingestion.md  2026-06-21T00-00-00_task2_markdown_chunking.md  2026-06-22-173116-xdg-model-cache.md  2026-06-25-json-field-aware-ingestion.md  2026-06-25T000000-task2-json-record-parsing.md  2026-06-25T010000-task3-json-record-flattening.md  2026-06-25T120000-task4-chunk-json-integration.md  2026-06-29T185024-release-ci-workflow.md  2026-06-29T230416-fix-cross-build-openssl.md  2026-06-29T233457-add-windows-release-targets.md
docs/superpowers/plans/: 2026-06-20-ragamuffin-mvp.md  2026-06-21-directory-ingestion.md  2026-06-23-field-aware-json-ingestion.md
docs/superpowers/specs/: 2026-06-20-ragamuffin-mvp-design.md  2026-06-21-directory-ingestion-design.md  2026-06-22-field-aware-json-ingestion-design.md
src/: chunk.rs  cli.rs  error.rs  lib.rs  main.rs  mcp.rs  rag.rs  scan.rs  store.rs
src/embedder/: fake.rs  fastembed.rs  mod.rs
