[package]
name = "ragamuffin"
version = "0.1.2"
edition = "2021"
authors = ["Peter Grace <pete.grace@gmail.com>"]

[lib]
name = "ragamuffin"
path = "src/lib.rs"

[[bin]]
name = "ragamuffin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
directories = "6.0.0"
dotenv = "0.15"
fastembed = { version = "5", default-features = false, features = [
    "ort-download-binaries",
    "hf-hub-rustls-tls",
    "image-models",
] }
indicatif = "0.18"
rayon = "1"
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
