[package]
name = "ragamuffin"
version = "0.1.5"
edition = "2021"
authors = ["Peter Grace <pete.grace@gmail.com>"]

[lib]
name = "ragamuffin"
path = "src/lib.rs"

[[bin]]
name = "ragamuffin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
directories = "6.0.0"
dotenv = "0.15"
fastembed = { version = "5", default-features = false, features = [
    "ort-download-binaries",
    "hf-hub-rustls-tls",
    "image-models",
] }
indicatif = "0.18"
rayon = "1"
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

# `ort-sys`'s build script downloads the ONNX Runtime binary using `ureq` with
# `native-tls`. On Linux `native-tls` links `openssl-sys`; on Windows it uses
# SChannel and on macOS it uses Security.framework, so OpenSSL is only ever
# pulled in on Linux. Declaring `openssl-sys` here with the `vendored` feature
# forces it to compile OpenSSL from source for the build host, so no system
# OpenSSL is required. `openssl-sys` lives in the build dependency graph (it is
# only reached through `ort-sys`'s build script), so the feature must be enabled
# from *our* build dependencies to unify across that graph; the no-op `build.rs`
# ensures this build dependency is active. Scope it to Linux so Windows and
# macOS builds do not try to compile OpenSSL (which they neither need nor have
# the Perl/NASM toolchain for).
[target.'cfg(target_os = "linux")'.build-dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
